--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <style>
       .nav-link {
-        color: black;
+        color: rgb(229, 226, 226);
         font-size: larger;
         font-weight: 500;
       }
@@ -118,6 +118,13 @@
         top: 0;
         border-radius: 10px;
       }
+
+
+      @media only screen and (max-width: 600px) {
+  .photo {
+    height: 300px !important;
+  }
+}
     </style>
   </head>
 
@@ -180,6 +187,14 @@
                   >Projects</a
                 >
               </li>
+              <li class="nav-item">
+                <a
+                  style="text-shadow: 2px 2px gray"
+                  class="nav-link"
+                  href="#scrollspyContacts"
+                  >Contacts</a
+                >
+              </li>
             </ul>
           </div>
         </div>
@@ -193,11 +208,11 @@
       <section class="container3">
         <div class="container">
           <div class="row">
-            <div class="col-lg-6 text-center">
+            <div class="col-lg-6  d-flex align-items-center justify-content-center">
               <img
                 src="img5.jpg"
-                style="height: 500px"
-                class="img-fluid p-5 photo rounded-pill"
+                style="height: 500px;"
+                class="img-fluid p-5 photo rounded-pill "
                 alt="..."
               />
             </div>
@@ -239,8 +254,15 @@
                   class="icon-link text-black ps-3 shadow"
                   href="tel:+916370291831"
                 >
-                  <i class="bi bi-whatsapp"></i>
+                  <i class="bi bi-telephone"></i>
                 </a>
+                <a
+                  class="icon-link text-black ps-3 shadow"
+                  href="https://wa.me/6370291831"
+                >
+                <i class="bi bi-whatsapp"></i>
+                </a>
+                
 
                 <!-- <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
                     <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"/>
@@ -629,7 +651,7 @@
       <!-- section7 -->
       <!-- footer -->
 
-      <div class="container7">
+      <div class="container7" id="scrollspyContacts">
         <div class="container pt-5">
           <footer class="py-3 my-4">
             <ul class="nav justify-content-center border-bottom pb-3 mb-3">
