--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css"
     />
-    <title>Portfolio-Swaraj Kumar Swain</title>
-    <link rel="icon" type="image/x-icon" href="favicon.png" />
+    <title>Swaraj Kumar Swain</title>
+    <link rel="icon" type="image/x-icon" href="favicon2.png" />
 
     <style>
       .nav-link {
