--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
     <!-- container for background image -->
     <section class="bgimage">
       <!-- section3 -->
-      <!-- profile -->
+      <!-- profile/About -->
       <section class="container3">
         <div class="container">
           <div class="row">
@@ -364,7 +364,7 @@
 
       <section class="container5 p-3">
         <div>
-          <h1 class="headlines text-center" id="scrollspyExperiences">
+          <h1 class="headlines text-center"  id="scrollspyExperiences">
             EXPERIENCES
           </h1>
         </div>
