--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css"
     />
     <title>Swaraj Kumar Swain</title>
-    <link rel="icon" type="image/x-icon" href="favicon.png" />
+    <link rel="icon" type="image/x-icon" href="favicon2.png" />
 
     <style>
       .nav-link {
